--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,20 @@
 body {
-  margin: 0;
+  /* margin: 25px 50px 75px 100px; */
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+html, body
+{
+    height: 100%;
+}
+
+#root {
+  height: 100%;
 }
 
 code {
