--- a/src/Screens/StartGameScreen/StartGameScreen.css
+++ b/src/Screens/StartGameScreen/StartGameScreen.css
@@ -3,36 +3,6 @@
     height: 100%;
 }
 
-.top {
-    width: 100%;
-    height: 50%;
-    background-color: #979797;
-    z-index: 0;
-}
-
-/* Bottom Half */
-.bottom {
-    width: 100%;
-    height: 50%;
-    z-index: 1;
-    background-color: white;
-    display: grid;
-    grid-template-columns: 15% auto 15%;
-    grid-template-rows: 5fr 1fr;
-    position: relative;
-}
-
-.inner {
-    grid-column: 2/3; 
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-    height: inherit;
-}
-
-.title {
-    text-align: center;
-}
-
 .pushDown {
     margin-top: 15px;
 }
@@ -53,6 +23,11 @@ li {
 
 .enterName {
     border: none;
+}
+
+.footer {
+    text-align: center;
+    margin-bottom: 10px;
 }
 
 h5 {
