--- a/src/SharedComponents/DropCardSpace/DropCardSpace.css
+++ b/src/SharedComponents/DropCardSpace/DropCardSpace.css
@@ -1,7 +1,8 @@
 .drop-space {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: nowrap;
+  overflow: hidden;
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 20px;
