--- a/src/SharedComponents/Top/Top.css
+++ b/src/SharedComponents/Top/Top.css
@@ -1,7 +1,7 @@
 .top {
   width: 100%;
-  height: 50%;
-  background-color: #979797;
+  height: 55%;
+  background-color: #D8D8D8;
   z-index: 0;
   overflow: hidden;
 }
