--- a/src/Screens/PlayerSelectionScreen/PlayerSelectionScreen.css
+++ b/src/Screens/PlayerSelectionScreen/PlayerSelectionScreen.css
@@ -2,6 +2,7 @@
   width: 80%;
   height: 50px;
   background-color: #D8D8D8;
+  color: #6F6F6F;
   margin-top: -22px;
   text-align: center;
   border-radius: 0 0 8px 8px;
