--- a/src/Screens/PlayerSelectionScreen/PlayerSelectionScreen.css
+++ b/src/Screens/PlayerSelectionScreen/PlayerSelectionScreen.css
@@ -3,7 +3,8 @@
   height: 50px;
   background-color: #D8D8D8;
   color: #6F6F6F;
-  margin-top: -22px;
+  margin-top: -1%;
+  margin-bottom: 2%;
   text-align: center;
   border-radius: 0 0 8px 8px;
   /* TODO: Make status modal not block top elements in small screens w/z-index */
