--- a/src/SharedComponents/DropCardSpace/DropCardSpace.css
+++ b/src/SharedComponents/DropCardSpace/DropCardSpace.css
@@ -1,9 +1,10 @@
 .drop-space {
   display: flex;
-  justify-content: space-evenly;
+  width: 100%;
+  justify-content: space-around;
   flex-wrap: nowrap;
   overflow: hidden;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 20px;
+  padding-left: 1%;
+  padding-right: 1%;
+  padding-top: 5%;
 }
