css refactoring for bottom spacing

--- a/src/SharedComponents/Bottom/Bottom.css
+++ b/src/SharedComponents/Bottom/Bottom.css
@@ -11,6 +11,6 @@
   padding: 0px 15px;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
   height: 100%;
 }
