--- a/src/Screens/PlayerSelectionScreen/PlayerSelectionScreen.css
+++ b/src/Screens/PlayerSelectionScreen/PlayerSelectionScreen.css
@@ -1,10 +1,9 @@
 .statusModal {
   width: 80%;
-  height: 50px;
+  height: 40px;
+  line-height: 40px;
   background-color: #D8D8D8;
   color: #6F6F6F;
-  margin-top: -1%;
-  margin-bottom: 2%;
   text-align: center;
   border-radius: 0 0 8px 8px;
   /* TODO: Make status modal not block top elements in small screens w/z-index */
