--- a/src/SharedComponents/Button/Button.css
+++ b/src/SharedComponents/Button/Button.css
@@ -2,6 +2,7 @@
 .menuButton {
     background-color: #979797;
     border-radius: 8px;
+    border: 0px;
     width: 182px;
     height: 50px;
     line-height: 50px;
@@ -9,4 +10,16 @@
     font-weight: bold;
     font-size: 23px;
     cursor: pointer;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover 
+{
+     color:black; 
+     text-decoration:none; 
+     cursor:pointer;  
 }
