--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -105,4 +105,7 @@
     border: 1px solid #979797;
     z-index: 0;
     position: relative;
+    width: 98%;
+    margin-left: auto;
+    margin-right: auto;
 }
